syntax = "proto3";
package irismod.farm;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/irisnet/irismod/modules/farm/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the farm Msg service.
service Msg {
  // CreatePool defines a method for creating a new farm pool
  rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);

  // DestroyPool defines a method for destroying a existed farm pool
  rpc DestroyPool(MsgDestroyPool) returns (MsgDestroyPoolResponse);

  // AppendReward defines a method for appending reward to a existed farm pool
  rpc AppendReward(MsgAppendReward) returns (MsgAppendRewardResponse);

  // Stake defines a method for staking some lp token to a farm pool
  rpc Stake(MsgStake) returns (MsgStakeResponse);

  // Unstake defines a method for unstaking some lp token from a farm pool and
  // withdraw some reward
  rpc Unstake(MsgUnstake) returns (MsgUnstakeResponse);

  // Harvest defines a method withdraw some reward from a farm pool
  rpc Harvest(MsgHarvest) returns (MsgHarvestResponse);
}

message MsgCreatePool {
  option (gogoproto.equal) = true;

  string name = 1;
  string description = 2;
  string lp_token_denom = 3;
  uint64 start_height = 4;
  repeated cosmos.base.v1beta1.Coin reward_per_block = 5 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin total_reward = 6 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  bool destructible = 7;
  string creator = 8;
}

message MsgDestroyPool {
  option (gogoproto.equal) = true;

  string pool_name = 1;
  string creator = 2;
}

message MsgAppendReward {
  option (gogoproto.equal) = true;

  string pool_name = 1;
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  string creator = 3;
}

message MsgStake {
  option (gogoproto.equal) = true;

  string pool_name = 1;
  cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string sender = 3;
}

message MsgUnstake {
  option (gogoproto.equal) = true;

  string pool_name = 1;
  cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
  string sender = 3;
}

message MsgHarvest {
  option (gogoproto.equal) = true;

  string pool_name = 1;
  string sender = 2;
}

message MsgCreatePoolResponse {}
message MsgDestroyPoolResponse {}
message MsgAppendRewardResponse {
  repeated cosmos.base.v1beta1.Coin remaining_reward = 8 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}
message MsgStakeResponse {
  repeated cosmos.base.v1beta1.Coin reward = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}
message MsgUnstakeResponse {
  repeated cosmos.base.v1beta1.Coin reward = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}
message MsgHarvestResponse {
  repeated cosmos.base.v1beta1.Coin reward = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}